--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
 	"private": true,
 	"scripts": {
 		"sass": "node-sass sass -o src/views",
-		"sass:watch": "node-sass -w sass -o src/views"
+		"sass:watch": "node-sass -w sass -o src/views",
+		"dev": "webpack -d",
+		"build": "webpack -p"
 	},
 	"keywords": [],
 	"author": "Isaac Bejarano",
 	"license": "ISC",
 	"devDependencies": {
 		"css-loader": "^4.3.0",
-		"style-loader": "^1.3.0"
+		"file-loader": "^6.1.1",
+		"html-webpack-plugin": "^4.5.0",
+		"style-loader": "^1.3.0",
+		"webpack": "^5.0.0",
+		"webpack-cli": "^4.0.0"
 	},
 	"dependencies": {
 		"@types/leaflet": "^1.5.17",
